--- a/components/package.json
+++ b/components/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^1.5.0",
-    "@stencil/core": "~0.16.2"
+    "@stencil/core": "^0.16.4"
   },
   "license": "MIT"
 }
