removed auth lib and moved everything up one level

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false,
+    // "allowUnreachableCode": false,
     "declaration": false,
     "experimentalDecorators": true,
     "lib": [
@@ -11,8 +11,8 @@
     "moduleResolution": "node",
     "module": "esnext",
     "target": "es2017",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "jsx": "react",
     "jsxFactory": "h"
   },
