--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/puppeteer": "1.11.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
+    "jest-trx-results-processor": "0.0.7",
     "puppeteer": "1.11.0"
   },
   "license": "MIT"
