--- a/M365ToolkitComponents/package.json
+++ b/M365ToolkitComponents/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "m365toolkit",
+  "name": "@m365toolkit/components",
   "version": "0.0.1",
   "description": "Microsoft 365 Toolkit",
   "module": "dist/esm/index.js",
-  "main" : "dist/index.js",
+  "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "files": [
@@ -17,8 +17,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^1.3.0",
-    "msal": "^0.2.4"
+    "@m365toolkit/providers": "file:../M365ToolkitContextProviders"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^1.5.0",
@@ -28,8 +27,7 @@
     "@types/winrt-uwp": "0.0.19",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
-    "jest-junit": "^6.2.1",
-    "puppeteer": "1.11.0"
+    "jest-junit": "^6.2.1"
   },
   "jest-junit": {
     "suiteName": "jest tests",
