--- a/M365ToolkitContextProviders/tsconfig.json
+++ b/M365ToolkitContextProviders/tsconfig.json
@@ -13,7 +13,8 @@
     "outDir": "dist/commonjs",
     "declaration": true,
     "esModuleInterop": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "rootDir": "src"
   },
   "exclude": [
     "node_modules"
