--- a/providers/package.json
+++ b/providers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@m365toolkit/providers",
+  "name": "@msgraphtoolkit/providers",
   "version": "0.0.1",
   "description": "Microsoft 365 Toolkit Context Providers",
   "main": "dist/es6/index.js",
@@ -13,12 +13,11 @@
     "build": "npm run clean && npm run build:modules && webpack"
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^1.3.0",
-    "@microsoft/microsoft-graph-types": "^1.5.0",
     "msal": "^0.2.4"
   },
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^1.5.0",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "shx": "^0.3.2",
     "ts-loader": "^5.3.3",
