--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,12 @@
     "experimentalDecorators": true,
     "lib": [
       "dom",
-      "es2017",
-      "es2015.promise"
+      "es2017"
     ],
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
-    "target": "es6",
-    "outDir": "dist/commonjs",
+    "target": "ES2017",
+    "outDir": "dist",
     "declaration": true,
     "esModuleInterop": true,
     "sourceMap": true,
