--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@msgraphtoolkit/components",
   "version": "0.0.1",
   "description": "Microsoft Graph Toolkit",
-  "main": "dist/index.js",
+  "main": "dist/es6/index.js",
   "scripts": {
     "clean": "shx rm -rf dist",
     "start": "npm run build && npm run serve",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc && webpack",
     "serve": "owc-dev-server --open . --port 3333"
   },
   "author": "@metulev",
@@ -18,8 +18,12 @@
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^1.6.0",
     "@webcomponents/webcomponentsjs": "^2.2.7",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "owc-dev-server": "^0.2.0",
     "shx": "^0.3.2",
-    "typescript": "^3.3.3333"
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
