--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@microsoft/microsoft-graph-types": "^1.6.0",
     "browser-sync": "^2.26.3",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
+    "gulp": "^4.0.0",
+    "gulp-append-prepend": "^1.0.6",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.0",
     "shx": "^0.3.2",
