--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "shx rm -rf dist",
     "start": "run-p sass:watch build:watch serve watch",
-    "build": "npm run clean && sass && tsc && webpack",
+    "build": "npm run clean && gulp sass && tsc && webpack",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "build:watch": "tsc --watch",
@@ -16,14 +16,14 @@
   "author": "@metulev",
   "license": "MIT",
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "^2.2.7",
     "lit-element": "^2.0.1",
     "msal": "^0.2.4"
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^1.6.0",
+    "@webcomponents/webcomponentsjs": "^2.2.7",
+    "@microsoft/microsoft-graph-types": "^1.7.0",
     "browser-sync": "^2.26.3",
-    "fork-ts-checker-webpack-plugin": "^0.5.2",
+    "fork-ts-checker-webpack-plugin": "^1.0.0",
     "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
