--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "lit-element": "^2.0.1",
     "msal": "^0.2.4",
-    "office-ui-fabric-core": "^9.6.1",
-    "@microsoft/sp-webpart-base": "1.7.1"
+    "office-ui-fabric-core": "^9.6.1"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^1.6.0",
