--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
+    "polymer-cli": "^1.9.7",
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-loader": "^5.3.3",
