--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
     "msal": "^0.2.4",
+    "node-sass": "^4.11.0",
     "office-ui-fabric-core": "^9.6.1"
   },
   "devDependencies": {
@@ -36,6 +37,10 @@
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
     "polymer-cli": "^1.9.7",
+    "rollup": "^1.7.3",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-commonjs": "^9.2.2",
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-loader": "^5.3.3",
