Added tests and coverage.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 	"recommendations": [
 		"nicolasparada.innerhtml",
 		"bierner.lit-html",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"firsttris.vscode-jest-runner"
 	]
 }
