--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,9 +38,9 @@ steps:
     customCommand: test
 
 - task: PublishTestResults@2
-  displayName: 'Publish Test Results test/junit.xml'
+  displayName: 'Publish Test Results testResults/junit.xml'
   inputs:
-    testResultsFiles: test/junit.xml
+    testResultsFiles: testResults/junit.xml
   condition: succeededOrFailed()
 
 - task: PublishCodeCoverageResults@1
@@ -59,7 +59,7 @@ steps:
      .git
      node_modules
      coverage
-     test
+     testResults
      .gitignore
 
 - task: ArchiveFiles@2
