--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
     "msal": "^0.2.4",
-    "node-sass": "^4.11.0",
     "office-ui-fabric-core": "^9.6.1"
   },
   "devDependencies": {
@@ -34,16 +33,20 @@
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
     "polymer-cli": "^1.9.7",
     "rollup": "^1.7.3",
+    "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-commonjs": "^9.2.2",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-loader": "^5.3.3",
+    "tslib": "^1.9.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
