Migrating Changes to Src folder

--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   ],
   "scripts": {
     "clean": "shx rm -rf dist",
-    "start": "run-p sass:watch build:watch serve watch",
-    "build": "npm run clean && gulp sass && tsc && webpack",
-    "sass": "gulp sass",
-    "sass:watch": "gulp watchSass",
-    "build:watch": "tsc --watch",
+    "start": "run-p build:watch serve watch",
+    "build": "rollup -c rollup.config.js",
+    "build:watch": "rollup -w -c rollup.config.js",
     "serve": "owc-dev-server --port 3333",
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "test": "jest",
