Finishing up Restructure

--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   ],
   "scripts": {
     "clean": "shx rm -rf dist",
-    "start": "run-p sass:watch build:watch serve watch",
-    "build": "npm run clean && gulp sass && tsc && webpack",
-    "sass": "gulp sass",
-    "sass:watch": "gulp watchSass",
-    "build:watch": "tsc --watch",
+    "start": "run-p build:watch serve watch",
+    "build": "rollup -c rollup.config.js",
+    "build:watch": "rollup -w -c rollup.config.js",
     "serve": "owc-dev-server --port 3333",
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "test": "jest",
@@ -36,15 +34,23 @@
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "node-sass": "^4.11.0",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
     "polymer-cli": "^1.9.7",
+    "rollup": "^1.7.3",
+    "rollup-plugin-commonjs": "^9.2.2",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
+    "tslib": "^1.9.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
