--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,15 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
+    "lib": ["dom", "es2015"],
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es2015",
-    "outDir": "dist/es6",
     "declaration": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "rootDir": "src"
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["module_types.d.ts", "src"]
 }
