--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "microsoft-graph-toolkit",
   "version": "0.0.1",
   "description": "Microsoft Graph Toolkit",
-  "main": "dist/es6/index.js",
+  "main": "dist/bundle/index.js",
   "files": [
     "dist"
   ],
@@ -29,17 +29,11 @@
     "@types/jest": "^24.0.11",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "browser-sync": "^2.26.3",
-    "fork-ts-checker-webpack-plugin": "^1.0.0",
-    "gulp": "^4.0.0",
-    "gulp-append-prepend": "^1.0.6",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
     "node-sass": "^4.11.0",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
-    "polymer-cli": "^1.9.7",
     "rollup": "^1.7.3",
     "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-node-resolve": "^4.0.1",
@@ -49,11 +43,8 @@
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-jest": "^24.0.0",
-    "ts-loader": "^5.3.3",
     "tslib": "^1.9.3",
-    "typescript": "^3.3.4000",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "typescript": "^3.3.4000"
   },
   "jest-junit": {
     "suiteName": "jest tests",
