--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "lib": ["dom", "es2015"],
+    "target": "es2015",
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2015",
+    "lib": ["dom", "es2015"],
+    "rootDir": "src",
     "declaration": true,
+    "declarationDir": "./dist/types/",
+    "outDir": "./dist/types",
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "rootDir": "src"
   },
   "exclude": ["node_modules"],
   "include": ["module_types.d.ts", "src"]
