--- a/package.json
+++ b/package.json
@@ -26,10 +26,6 @@
   "license": "MIT",
   "dependencies": {
     "@microsoft/teams-js": "^1.4.1",
-    "gulp": "^4.0.0",
-    "gulp-append-prepend": "^1.0.6",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
     "lit-element": "^2.1.0",
     "msal": "^0.2.4",
     "office-ui-fabric-core": "^9.6.1"
@@ -54,7 +50,11 @@
     "shx": "^0.3.2",
     "ts-jest": "^24.0.0",
     "tslib": "^1.9.3",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "gulp": "^4.0.0",
+    "gulp-append-prepend": "^1.0.6",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
   },
   "jest-junit": {
     "suiteName": "jest tests",
