--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.0.2"
   },
   "jest-junit": {
     "suiteName": "jest tests",
