Got IE11 Builds working

--- a/es5.tsconfig.json
+++ b/es5.tsconfig.json
@@ -11,6 +11,6 @@
     "sourceMap": true,
     "declaration": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "!node_modules/lit-element"],
   "include": ["src"]
 }
