--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "microsoft-graph-toolkit",
   "version": "0.0.1",
   "description": "Microsoft Graph Toolkit",
-  "main": "dist/es6/bundle/index.js",
+  "main": "dist/es5/raw/index.js",
+  "module": "dist/es6/raw/index.js",
+  "jsnext:main": "dist/es6/raw/index.js",
+  "types": "dist/es6/raw/index.d.ts",
   "files": [
     "dist"
   ],
@@ -31,16 +34,28 @@
     "office-ui-fabric-core": "^9.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
     "@microsoft/microsoft-graph-types": "^1.7.0",
     "@types/jest": "^24.0.11",
     "@webcomponents/webcomponentsjs": "^2.2.7",
+    "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.3",
-    "node-sass": "^4.11.0",
+    "gulp": "^4.0.0",
+    "gulp-append-prepend": "^1.0.6",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
     "rollup": "^1.7.3",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
@@ -48,14 +63,11 @@
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.17.3",
     "shx": "^0.3.2",
-    "tslib": "^1.9.3",
     "ts-jest": "^24.0.1",
     "ts-loader": "^5.3.3",
+    "tslib": "^1.9.3",
     "typescript": "^3.3.4000",
-    "gulp": "^4.0.0",
-    "gulp-append-prepend": "^1.0.6",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "whatwg-fetch": "^3.0.0"
   },
   "jest-junit": {
     "suiteName": "jest tests",
