--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "microsoft-graph-toolkit",
   "version": "0.0.1",
-  "description": "Microsoft Graph Toolkit",
+  "description": "UI for the Microsoft Graph",
+  "keywords": ["microsoft graph", "web components", "msal"],
+  "homepage": "https://github.com/microsoftgraph/microsoft-graph-toolkit",
+  "bugs": {"url" : "https://github.com/microsoftgraph/microsoft-graph-toolkit/issues"},
+  "repository": {"type": "git", "url": "https://github.com/microsoftgraph/microsoft-graph-toolkit"},
+  "author": "Microsoft",
+  "license": "MIT",
   "main": "dist/es6/index.js",
+  "types": "dist/es6/index.d.ts",
+  "browser": "dist/bundle/mgt-loader.js",
+  "module": "dist/es6/index.js",
+  "jsnext:main": "dist/es6/index.js",
   "files": [
     "dist"
   ],
@@ -13,7 +23,8 @@
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
-    "build": "npm run clean && gulp sass && tsc && npm run build:bundle",
+    "build": "run-s clean sass build:esm build:bundle",
+    "build:esm": "tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
@@ -21,8 +32,6 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "author": "@metulev",
-  "license": "MIT",
   "dependencies": {
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
