--- a/tsconfig.bundle.json
+++ b/tsconfig.bundle.json
@@ -6,7 +6,7 @@
       "dom",
       "es2015"
     ],
-    "module": "es6",
+    "module": "esnext",
     "moduleResolution": "node",
     "target": "es2015",
     "outDir": "dist/es6",
@@ -16,8 +16,7 @@
     "rootDir": "src"
   },
   "exclude": [
-    "node_modules",
-    "src/bundle"
+    "node_modules"
   ],
   "include": [
     "src"
