--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
   },
   "author": "Microsoft",
   "license": "MIT",
-  "main": "dist/es6/index.js",
-  "types": "dist/es6/index.d.ts",
-  "browser": "dist/bundle/mgt-loader.js",
-  "module": "dist/es6/index.js",
-  "jsnext:main": "dist/es6/index.js",
+  "main": "./dist/es6/index.js",
+  "types": "./dist/es6/index.d.ts",
+  "module": "./dist/es6/index.js",
   "files": [
     "dist"
   ],
@@ -32,21 +30,22 @@
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
-    "build": "run-s clean sass build:esm build:dts build:bundle",
+    "build": "run-s clean sass build:esm build:bundle",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
-    "build:dts": "tsc -d -m amd --outFile index.d.ts --emitDeclarationOnly",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepack": "npm run build"
   },
   "dependencies": {
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
     "msal": "^0.2.4",
-    "office-ui-fabric-core": "^9.6.1"
+    "office-ui-fabric-core": "10.0.0",
+    "@microsoft/microsoft-graph-types": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -55,7 +54,6 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
-    "@microsoft/microsoft-graph-types": "^1.7.0",
     "@types/jest": "^24.0.11",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "babel-polyfill": "6.5.0",
@@ -84,7 +82,7 @@
     "shx": "^0.3.2",
     "ts-jest": "^24.0.1",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.4.3",
+    "typescript": "^3.4.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "whatwg-fetch": "^3.0.0"
