--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "target": "es2015",
     "outDir": "dist/es6",
-    "declaration": false,
+    "declaration": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "rootDir": "src"
