--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
-    "build": "run-s clean sass build:esm build:bundle",
+    "build": "run-s prettier:check clean sass build:esm build:bundle",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
@@ -38,7 +38,10 @@
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "prettier:base": "prettier --parser typescript --single-quote --print-width 120",
+    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
+    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@microsoft/teams-js": "^1.4.1",
@@ -65,10 +68,12 @@
     "gulp-append-prepend": "^1.0.6",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "husky": "^1.3.1",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
     "owc-dev-server": "^0.2.1",
+    "prettier": "1.17.0",
     "regenerator-runtime": "^0.13.2",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
@@ -94,5 +99,10 @@
     "titleTemplate": "{classname} - {title}",
     "ancestorSeparator": " > ",
     "usePathForSuiteName": "true"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run build"
+    }
   }
 }
