--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^1.6.0-Preview.2",
     "@microsoft/microsoft-graph-types": "^1.8.0",
+    "@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
     "msal": "^0.2.4",
