--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,5 @@
 {
   // See https://go.microsoft.com/fwlink/?LinkId=827846
   // for the documentation about the extensions.json format
-  "recommendations": [
-    "nicolasparada.innerhtml",
-    "bierner.lit-html",
-    "esbenp.prettier-vscode",
-    "firsttris.vscode-jest-runner"
-  ]
+  "recommendations": ["nicolasparada.innerhtml", "bierner.lit-html", "esbenp.prettier-vscode"]
 }
