--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build"
+      "pre-commit": "npm run prettier:write"
     }
   },
   "prettier": {
