--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^1.6.0-Preview.3",
+    "@microsoft/microsoft-graph-client": "^1.6.0",
     "@microsoft/microsoft-graph-types": "^1.8.0",
     "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
