Add license header

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
+    "setHeader": "gulp setHeader",
     "build": "run-s prettier:check setVersion clean sass build:esm build:bundle",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
@@ -67,8 +68,10 @@
     "cpx": "^1.5.0",
     "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.6",
+    "gulp-header-license": "^1.0.9",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-util": "^3.0.8",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
