updated angular sample

--- a/samples/angular-app/package.json
+++ b/samples/angular-app/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@microsoft/mgt": "0.1.0-preview.8",
     "@microsoft/microsoft-graph-types": "^1.7.0",
     "core-js": "^2.5.4",
-    "microsoft-graph-toolkit": "file:../microsoft-graph-toolkit/microsoft-graph-toolkit-0.0.1.tgz",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
