updated sharepoint and teams demos

--- a/samples/sp-webpart/.yo-rc.json
+++ b/samples/sp-webpart/.yo-rc.json
@@ -3,8 +3,8 @@
     "isCreatingSolution": true,
     "environment": "spo",
     "version": "1.8.0",
-    "libraryName": "sp-webpart",
-    "libraryId": "ec5d7704-a014-425e-a9f0-01434914e080",
+    "libraryName": "mgt-demo",
+    "libraryId": "b0ed193e-b333-4796-b249-e34916ef7a85",
     "packageManager": "npm",
     "isDomainIsolated": false,
     "componentType": "webpart"
