--- a/samples/sp-webpart/config/config.json
+++ b/samples/sp-webpart/config/config.json
@@ -2,17 +2,17 @@
   "$schema": "https://developer.microsoft.com/json-schemas/spfx-build/config.2.0.schema.json",
   "version": "2.0",
   "bundles": {
-    "hello-world-web-part": {
+    "mgt-demo-web-part": {
       "components": [
         {
-          "entrypoint": "./lib/webparts/helloWorld/HelloWorldWebPart.js",
-          "manifest": "./src/webparts/helloWorld/HelloWorldWebPart.manifest.json"
+          "entrypoint": "./lib/webparts/mgtDemo/MgtDemoWebPart.js",
+          "manifest": "./src/webparts/mgtDemo/MgtDemoWebPart.manifest.json"
         }
       ]
     }
   },
   "externals": {},
   "localizedResources": {
-    "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js"
+    "MgtDemoWebPartStrings": "lib/webparts/mgtDemo/loc/{locale}.js"
   }
 }
