--- a/samples/teams-tab/package.json
+++ b/samples/teams-tab/package.json
@@ -7,7 +7,7 @@
     "build": "parcel build ./*.html"
   },
   "dependencies": {
-    "microsoft-graph-toolkit": "file:../../"
+    "@microsoft/mgt": "0.1.0-preview.8"
   },
   "devDependencies": {
     "cssnano": "^4.1.10"
