--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sp-webpart",
+  "name": "mgt-demo",
   "version": "0.0.1",
   "private": true,
   "engines": {
@@ -11,24 +11,32 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.8.0",
-    "@microsoft/sp-lodash-subset": "1.8.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.8.0",
-    "@microsoft/sp-property-pane": "1.8.0",
-    "@microsoft/sp-webpart-base": "1.8.0",
+    "@microsoft/mgt": "0.1.0-preview.8",
+    "@microsoft/sp-core-library": "1.8.1",
+    "@microsoft/sp-lodash-subset": "1.8.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.8.1",
+    "@microsoft/sp-property-pane": "1.8.1",
+    "@microsoft/sp-webpart-base": "1.8.1",
     "@types/es6-promise": "0.0.33",
+    "@types/react": "16.4.2",
+    "@types/react-dom": "16.0.5",
     "@types/webpack-env": "1.13.1",
-    "microsoft-graph-toolkit": "file:../.."
+    "react": "16.7.0",
+    "react-dom": "16.7.0"
+  },
+  "resolutions": {
+    "@types/react": "16.4.2"
   },
   "devDependencies": {
+    "@microsoft/rush-stack-compiler-3.3": "0.2.9",
     "@microsoft/sp-build-web": "1.8.0",
-    "@microsoft/sp-tslint-rules": "1.8.0",
     "@microsoft/sp-module-interfaces": "1.8.0",
+    "@microsoft/sp-tslint-rules": "1.8.0",
     "@microsoft/sp-webpart-workbench": "1.8.0",
-    "@microsoft/rush-stack-compiler-2.7": "0.4.0",
-    "gulp": "~3.9.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2"
+    "ajv": "~5.2.2",
+    "gulp": "~3.9.1",
+    "typescript": "^3.4.3"
   }
 }
