--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt",
-  "version": "0.1.0-preview.8",
+  "version": "0.1.0",
   "description": "The Microsoft Graph Toolkit",
   "keywords": [
     "microsoft graph",
@@ -49,7 +49,6 @@
     "@microsoft/microsoft-graph-client": "^1.7.0-Preview.1",
     "@microsoft/microsoft-graph-types": "^1.8.0",
     "@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
-    "@microsoft/teams-js": "^1.4.1",
     "lit-element": "^2.1.0",
     "msal": "^1.0.0",
     "office-ui-fabric-core": "10.0.0"
