--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@microsoft/microsoft-graph-client": "^1.7.0-Preview.1",
     "@microsoft/microsoft-graph-types": "^1.8.0",
     "@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
+    "adaptivecards": "^1.2.0",
     "lit-element": "^2.1.0",
     "msal": "1.0.0",
     "office-ui-fabric-core": "10.0.0"
