--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "clean": "shx rm -rf dist",
-    "start": "run-p sass:watch build:watch serve watch",
+    "start": "npm run sass && run-p sass:watch build:watch serve watch",
     "serve": "owc-dev-server --port 3333",
     "watch": "browser-sync start --no-notify --proxy localhost:3333 --files 'dist/**/*.js, index.html'",
     "sass": "gulp sass",
