--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "nicolasparada.innerhtml",
     "bierner.lit-html",
     "esbenp.prettier-vscode",
-    "rebornix.project-snippets"
+    "rebornix.project-snippets",
+    "ms-vscode.vscode-typescript-tslint-plugin"
   ]
 }
