--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "test": "jest",
@@ -90,6 +91,7 @@
     "sass": "^1.17.3",
     "shx": "^0.3.2",
     "ts-jest": "^24.0.1",
+    "tslint": "^5.18.0",
     "typescript": "^3.4.4",
     "whatwg-fetch": "^3.0.0"
   },
