--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "shx": "^0.3.2",
     "ts-jest": "^24.0.1",
     "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.4",
     "whatwg-fetch": "^3.0.0"
   },
