--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "esbenp.prettier-vscode",
     "rebornix.project-snippets",
     "ms-vscode.vscode-typescript-tslint-plugin",
-    "joelday.docthis"
+    "joelday.docthis",
+    "msjsdiag.debugger-for-edge"
   ]
 }
